# NAO_the_Matador

./: Readme.txt
NAO/: Caramba.m4a  Ole.m4a  Readme.txt
NAO/src/nao_matador/: CMakeLists.txt  package.xml
NAO/src/nao_matador/action/: Blink.action  SetSpeechVocabulary.action
NAO/src/nao_matador/launch/: nao.launch
NAO/src/nao_matador/msg/: Detection_msg.msg
NAO/src/nao_matador/script/: audio_player_server.py  corazon.py  motion_server.py
NAO/src/nao_matador/src/: bumpers.cpp  leds.cpp  speech.cpp  test_cam.cpp  vision.cpp  walking.cpp
NAO/src/nao_matador/srv/: Audio_msgs.srv  Led_msgs.srv  Motion_msgs.srv  Speaking_msgs.srv  Walking_msgs.srv
bull/: CMakeLists.txt  ReadMe.md  package.xml
bull/msg/: Tracking.msg
bull/scripts/: Line_Tracking.py  camera_node.py  main.py
bull/scripts/testing/: image_test.py  led_detection.py  params_tuning.py  take_pic.py  test1.py  test2.py  test3.py  tracker_pub.py
