<?xml version="1.0"?>
<package>
    <name>nao_matador</name>
    <version>1.0.0</version>
    <description>The nao_matador package</description>

    <author email="j.andregon15@gmail.com">Andres Gonzalez</author>
    <author email="ing.biomed.varona@gmail.com">Jesus Andres</author>
    <author email="shuousha@outlook.com">Sherif Shousha</author>
    <author email="wenlan.shen@tum.de">Wenlan Shen</author>
    
    <maintainer email="c.uhde@tum.de">Constantin Uhde</maintainer>
    
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>naoqi_bridge_msgs</build_depend>
    <build_depend>std_srvs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>actionlib</build_depend>
    <build_depend>actionlib_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>message_generation</build_depend>
  
    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>naoqi_bridge_msgs</run_depend>
    <run_depend>std_srvs</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>actionlib</run_depend>
    <run_depend>actionlib_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>message_runtime</run_depend>
    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
